# 3DPrinting-Failure-Detection

./: .checkov.yaml  .coverage  .firebaserc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.MD  coomm  critique.md  docker-compose.yml  documentation.md  firebase.json  firestore.rules  local_test.md  main_review.md  pre-commit  requirements-test.txt  requirements.txt
.firebase/: hosting.ZGFzaGJvYXJk.cache
.github/: .pre-commit-config.yaml  .tflint.hcl
app/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  teacher.py
app/scripts/: merge.py  split_train_val_stats.py  teacher_weighted.py  test.py  tester.py  videotester.py
app/src/printerfail.egg-info/: PKG-INFO
app/src/printerfail/cli/: predict.py  train.py
app/src/printerfail/config/: highmap.yaml
app/src/printerfail/io/: paths.py
app/src/printerfail/model/: yolo.py
app/tests/: test_paths.py
confs/: 00-index.md  01-architecture.md  02-cloud-services.md  03-pi-edge.md  04-ml-model.md  05-infrastructure.md  06-dashboard.md  07-testing.md  08-ci-cd.md  09-deployment-ops.md  10-local-test.md  11-costs-and-monitoring.md  12-glossary.md  feedback.md
dashboard/: index.html
debugging/: .gitignore  README.md  requirements.txt  run.py  setup.sh
local_test/: local_alert_handler.py  local_judge.py  orchestrator.py  run_local.sh
models/: model.h5  model_2025-03-29_19-17-04.keras  model_2025-03-29_19-49-40.keras  model_2025-03-29_19-54-12.keras  model_20250329_183054.keras  model_20250329_183517.keras  model_20250329_184141.keras  model_20250329_184946.keras  (+4 more)
(+117 files in other folders)
