[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "printerfail"
version = "0.1.0"
description = "3D printing failure detection – YOLO pipeline"
requires-python = ">=3.10"
dependencies = [
  "ultralytics==8.3.33",
  "opencv-python-headless",
  "pandas",
  "scipy",
  "pyyaml",
  "rich"                 
]

[project.scripts]
printerfail-train = "printerfail.cli.train:main"
printerfail-predict = "printerfail.cli.predict:main"
printerfail-video = "printerfail.cli.video:main"

[tool.setuptools.packages.find]
where = ["src"]
